--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,48 +1,52 @@
 :root {
-    --white: #fff;
-    --background: #F2F3F5;
-    --gray-line: #DCDDE0;
-    --text: #666;
-    --text-highlight:#B3B9FF;
-    --title: #2E384D;
-    --red: #E83F5B;
-    --green: #4CD62B;
-    --blue: #5965ED;
-    --blue-dark: #4953B8;
-    --blue-twitter: #2AA9E0;
+	--white: #fff;
+	--background: #222;
+	--gray-line: #dcdde0;
+	--text: #999;
+	--text-highlight: #b3b9ff;
+	--title: #2e384d;
+	--dark-title: #1d2533;
+	--red: #e83f5b;
+	--green: #4cd62b;
+	--blue: #5965ed;
+	--blue-dark: #4953b8;
+	--blue-twitter: #2aa9e0;
 }
 
-@media(max-width: 1080px) {
-    html{
-        font-size: 93.75%;
-    }
+@media (max-width: 1080px) {
+	html {
+		font-size: 93.75%;
+	}
 }
-@media(max-width: 720px) {
-    html{
-        font-size: 87.5%;
-    }
-}
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@media (max-width: 720px) {
+	html {
+		font-size: 87.5%;
+	}
 }
 
-body{
-    background: var(--background);
-    color: var(--text);
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-body, button, input, textarea {
-    font: 400 1rem 'Inter', sans-serif;
+body {
+	background: var(--background);
+	color: var(--text);
+}
+
+body,
+button,
+input,
+textarea {
+	font: 400 1rem "Inter", sans-serif;
 }
 
 button {
-    cursor: pointer;
+	cursor: pointer;
 }
 
-a{
-    color: inherit;
-    text-decoration: none;
+a {
+	color: inherit;
+	text-decoration: none;
 }
