--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -1,113 +1,115 @@
 .challangeBoxContainer {
-    height: 100%;
+	height: 100%;
 
-    background-color: var(--white);
-    border-radius: 5px;
-    box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
-    padding: 1.5rem 2rem;
+	background-color: var(--gray-line);
+	border-radius: 5px;
+	box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
+	padding: 1.5rem 2rem;
 
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 
-    text-align: center;
+	text-align: center;
 }
 
 .challengeNotActive {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 
 .challengeNotActive strong {
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 1.4;
+	font-size: 1.5rem;
+	font-weight: 500;
+	line-height: 1.4;
+	color: var(--dark-title);
 }
 
 .challengeNotActive p {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    line-height: 1.4;
-    max-width: 70%;
-    margin-top: 3rem;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	line-height: 1.4;
+	max-width: 70%;
+	margin-top: 3rem;
+	color: var(--title);
 }
 
 .challengeNotActive p img {
-    margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .challengeActive {
-    height: 100%;
+	height: 100%;
 
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .challengeActive header {
-    color: var(--blue);
-    font-weight: 600;
-    font-size: 1.25rem;
-    padding: 0 2rem 1.5rem;
-    border-bottom: 1px solid var(--gray-line); 
-
+	color: var(--blue);
+	font-weight: 600;
+	font-size: 1.25rem;
+	padding: 0 2rem 1.5rem;
+	border-bottom: 1px solid var(--gray-line);
 }
 
 .challengeActive main {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+	flex: 1;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .challengeActive main strong {
-    font-size: 2rem;
-    font-weight: 600;
-    color: var(--title);
-    margin: 0 1.5rem  0 1rem;
+	font-size: 2rem;
+	font-weight: 600;
+	color: var(--title);
+	margin: 0 1.5rem 0 1rem;
 }
 
 .challengeActive main p {
-    line-height: 1.5;
+	line-height: 1.5;
+	color: var(--title);
 }
 
 .challengeActive footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 1rem;
 }
 
 .challengeActive footer button {
-    height: 3rem;
+	height: 3rem;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-    border: 0;
-    border-radius: 5px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
-    border-bottom: 2px solid #D7D8DA;
+	border: 0;
+	border-radius: 5px;
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
+	border-bottom: 2px solid #d7d8da;
 
-    color: var(--white);
+	color: var(--white);
 
-    font-size: 1rem;
-    font-weight: 600;
+	font-size: 1rem;
+	font-weight: 600;
 
-    transition: 0.3s;
+	transition: 0.3s;
 }
 
 .challengeActive footer button.challengeFailedButton {
-    background-color: var(--red);
+	background-color: var(--red);
 }
 
 .challengeActive footer button.challengeSucceededButton {
-    background-color: var(--green);
+	background-color: var(--green);
 }
 
 .challengeActive footer button:hover {
-    filter: brightness(0.9);
+	filter: brightness(0.9);
 }
